vercre-issuer/src/snapshots/vercre_issuer__credential__tests__ad-response.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 565
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"
