vercre-issuer/src/snapshots/vercre_issuer__credential__tests__ad-state.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 516
expression: state
---
expires_at: "[expires_at]"
credential_issuer: "http://vercre.io"
credential_identifiers:
  - EmployeeID_JWT
subject_id: normal_user
token:
  access_token: ABCDEF
  token_type: Bearer
  c_nonce: "[c_nonce]"
  c_nonce_expires_at: "[c_nonce_expires_at]"
