vercre-issuer/src/snapshots/vercre_issuer__credential__tests__ad-vc.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 505
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://vercre.io/credentials/v1"
id: "http://vercre.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
issuer: "http://vercre.io"
issuanceDate: "[issuanceDate]"
credentialSubject:
  familyName: Person
  givenName: Normal
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
