vercre-issuer/src/snapshots/vercre_issuer__credential__tests__state.snap
---
source: vercre-issuer/src/credential.rs
assertion_line: 495
expression: state
---
expires_at: "[expires_at]"
credential_identifiers:
  - EmployeeID_JWT
subject_id: normal_user
current_step:
  token:
    access_token: ABCDEF
    c_nonce: "[c_nonce]"
    c_nonce_expires_at: "[c_nonce_expires_at]"
